--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -75,22 +75,11 @@
       "service": "Lambda"
     }
   },
-  "parameters": {
-    "AMPLIFY_function_signalClonePostConfirmation_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "signalClonePostConfirmation"
-        }
-      ]
-    },
-    "AMPLIFY_function_signalClonePostConfirmation_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "signalClonePostConfirmation"
-        }
-      ]
+  "hosting": {
+    "amplifyhosting": {
+      "providerPlugin": "awscloudformation",
+      "service": "amplifyhosting",
+      "type": "manual"
     }
   },
   "storage": {
