--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -75,6 +75,7 @@
       "service": "Lambda"
     }
   },
+  "hosting": {},
   "parameters": {
     "AMPLIFY_function_signalClonePostConfirmation_deploymentBucketName": {
       "usedBy": [
