--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@aws-sdk/client-dynamodb": "^3.484.0",
     "@aws-sdk/lib-dynamodb": "^3.484.0",
     "@azure/core-asynciterator-polyfill": "^1.0.2",
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
-    "@react-native-masked-view/masked-view": "0.2.8",
+    "@expo/vector-icons": "^14.0.0",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -33,42 +33,43 @@
     "aws-amplify-react-native": "^7.0.8",
     "aws-sdk": "^2.1528.0",
     "dayjs": "^1.11.10",
-    "expo": "^48.0.21",
-    "expo-asset": "~8.9.1",
-    "expo-av": "~13.2.1",
-    "expo-constants": "~14.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-font": "~11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-media-library": "~15.2.3",
-    "expo-screen-orientation": "~5.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
-    "expo-system-ui": "~2.2.1",
-    "expo-web-browser": "~12.1.1",
+    "expo": "~50.0.3",
+    "expo-av": "~13.10.4",
+    "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.4",
+    "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.1",
+    "expo-screen-orientation": "~6.4.1",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
     "moment-jalaali": "^0.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.73.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-mathjax": "^2.1.2",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.11.6",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0",
-    "typescript": "^4.9.4"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.6.4",
+    "typescript": "^4.9.4",
+    "react-native-svg": "14.1.0",
+    "expo-asset": "~9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.27",
-    "@types/react-native": "~0.70.6",
+    "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~50.0.1",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
